fixed header z-index

--- a/src/components/WelcomeStorage/WelcomeStorage.module.scss
+++ b/src/components/WelcomeStorage/WelcomeStorage.module.scss
@@ -81,6 +81,7 @@
             transition: all .3s;
             text-decoration: none;
             text-align: center;
+            z-index: 999;
 
             &:hover {
                 background-color: $color-yellow;
